--- a/SpeckleRhinoChromium/app/index.html
+++ b/SpeckleRhinoChromium/app/index.html
@@ -8,7 +8,7 @@
     <title>Speckle Rhino UI</title>
 
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
 
     <!--<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">-->
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -99,9 +99,9 @@
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="js/lib/jquery.min.js"></script>
+    <script src="js/lib/jquery.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-    <script src="js/lib/bootstrap.min.js"></script>
+    <script src="js/lib/bootstrap.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/app.js"></script>
 
