--- a/SpeckleRhinoJS/app/index.html
+++ b/SpeckleRhinoJS/app/index.html
@@ -103,6 +103,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="js/lib/bootstrap.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/lib/SpeckleReceiver.min.js"></script>
     <script src="js/app.js"></script>
 
 </body>
