--- a/SpeckleRhinoChromium/app/index.html
+++ b/SpeckleRhinoChromium/app/index.html
@@ -1,109 +1,16 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Speckle Rhino UI</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1, minimum-scale=1">
+    <title>Speckle Rhino</title>
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
+    <link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="/dist/vue-material.css">
 
-    <!-- Bootstrap -->
-    <link href="css/bootstrap.css" rel="stylesheet">
-
-    <!--<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">-->
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-</head>
-<body>
-
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-2">
-                <div class="btn-group" role="group" aria-label="...">
-                    <button type="button" id="AddReceiver" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-cloud-download" aria-hidden="true"></span></button>
-                    <button type="button" id="AddSender" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span></button>
-
-
-                    <div class="btn-group">
-                        <button type="button" class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <span class="glyphicon glyphicon-cog" aria-hidden="true"></span><span>  </span><span class="caret"></span>
-                        </button>
-                        <ul class="dropdown-menu">
-                            <li><a href="#" onclick="cefCustomObject.showDevTools();">Open Dev Tools</a></li>
-                            <li><a href="#" onclick="cefCustomObject.openWeb('https://speckle.works');">Speckle.Works</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-2">
-                <div id="Receivers" class="list-group panel">
-                    <div id="ReceiverHeader" class="panel-heading"><h4>Receivers</h4></div>
-                    <div id="ReceiverContainer" class="sortable"></div>
-                    <!--<a href="#demo3" class="list-group-item list-group-item" data-toggle="collapse" data-parent="#MainMenu"><h5>Receiver Id: xxxxx</h5></a>
-                    <div class="collapse" id="demo3">
-                        <a href="#" class="list-group-item">Subitem 1</a>
-                        <a href="#" class="list-group-item">Subitem 2</a>
-                        <a href="#" class="list-group-item">Subitem 3</a>
-                    </div>
-                    <a href="#demo4" class="list-group-item list-group-item" data-toggle="collapse" data-parent="#MainMenu"><h5>Receiver Id: xxxxx</h5></a>
-                    <div class="collapse" id="demo4">
-                        <a href="#" class="list-group-item">Subitem 1</a>
-                        <a href="#" class="list-group-item">Subitem 2</a>
-                        <a href="#" class="list-group-item">Subitem 3</a>
-                    </div>
-                    <a href="#demo5" class="list-group-item list-group-item" data-toggle="collapse" data-parent="#MainMenu"><h5>Receiver Id: xxxxx</h5></a>
-                    <div class="collapse" id="demo5">
-                        <a href="#" class="list-group-item">Subitem 1</a>
-                        <a href="#" class="list-group-item">Subitem 2</a>
-                        <a href="#" class="list-group-item">Subitem 3</a>
-                    </div>-->
-                </div>
-
-                <div id="Senders" class="list-group panel">
-                    <div id="SenderHeader" class="panel-heading"><h4>Senders</h4></div>
-                    <div id="SenderContainer" class="sortable"></div>
-                    <!--<div class="sortableContainer">
-                        <a href="#demo6" class="list-group-item nodeHeader" data-toggle="collapse"><h5>Sender Id: xxxxx</h5></a>
-                        <div class="collapse nodeItem" id="demo6">
-                            <a href="#" class="list-group-item">Subitem 1</a>
-                            <a href="#" class="list-group-item">Subitem 2</a>
-                            <a href="#" class="list-group-item">Subitem 3</a>
-                        </div>
-                    </div>
-                    <div class="sortableContainer">
-                        <a href="#demo7" class="list-group-item nodeHeader" data-toggle="collapse" data-parent="#MainMenu"><h5>Sender Id: xxxxx</h5></a>
-                        <div class="collapse nodeItem" id="demo7">
-                            <a href="#" class="list-group-item">Subitem 1</a>
-                            <a href="#" class="list-group-item">Subitem 2</a>
-                            <a href="#" class="list-group-item">Subitem 3</a>
-                        </div>
-                    </div>
-                    <div class="sortableContainer">
-                        <a href="#demo8" class="list-group-item nodeHeader" data-toggle="collapse" data-parent="#MainMenu"><h5>Sender Id: xxxxx</h5></a>
-                        <div class="collapse nodeItem" id="demo8">
-                            <a href="#" class="list-group-item">Subitem 1</a>
-                            <a href="#" class="list-group-item">Subitem 2</a>
-                            <a href="#" class="list-group-item">Subitem 3</a>
-                        </div>
-                    </div>-->
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="js/lib/jquery.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-    <script src="js/lib/bootstrap.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/app.js"></script>
-
-</body>
+  </head>
+  <body style='background-color: #E6E6E6; overflow-x:hidden;'>
+    <div id="app"></div>
+    <script src="/dist/build.js"></script>
+  </body>
 </html>
