Continue to implement Pipeline. Now we need to call luveUpdate from .net to the server...

--- a/SpeckleRhinoChromium/app/index.html
+++ b/SpeckleRhinoChromium/app/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -12,5 +12,6 @@
   <body style='background-color: #E6E6E6; overflow-x:hidden;'>
     <div id="app"></div>
     <script src="dist/build.js"></script>
+     
   </body>
 </html>
